--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/TerriaJS/terriajs"
+    "url": "http://github.com/glughi/terriajs"
   },
   "config": {
     "docRepo": "git@github.com:TerriaJS/Documentation.git"
