--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "react-test-renderer": "^16.3.2",
     "svg-sprite-loader": "^3.4.0",
     "terriajs-jasmine-ajax": "^3.2.1",
-    "terriajs-server": "^2.7.4",
+    "terriajs-server": "glughi/terriajs-server#rer3d_1.0.0",
     "webpack-dev-server": "^2.9.2"
   },
   "scripts": {
