--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "terriajs",
-  "version": "7.6.10",
+  "name": "rer3d-terriajs",
+  "version": "2.0.0",
   "description": "Geospatial data visualization platform.",
   "license": "Apache-2.0",
   "engines": {
@@ -119,7 +119,7 @@
     "react-shallow-testutils": "^3.0.0",
     "react-test-renderer": "^16.3.2",
     "terriajs-jasmine-ajax": "^3.2.1",
-    "terriajs-server": "^3.0.1",
+    "rer3d-terriajs-server": "^1.1.0",
     "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
