--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rer3d-terriajs",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Geospatial data visualization platform.",
   "license": "Apache-2.0",
   "engines": {
@@ -119,7 +119,7 @@
     "react-shallow-testutils": "^3.0.0",
     "react-test-renderer": "^16.3.2",
     "terriajs-jasmine-ajax": "^3.2.1",
-    "rer3d-terriajs-server": "file:../rer3d-terriajs-server",
+    "rer3d-terriajs-server": "glughi/rer3d-terriajs-server",
     "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
