--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/glughi/terriajs"
+    "url": "http://github.com/bioretics/terriajs"
   },
   "config": {
     "docRepo": "git@github.com:TerriaJS/Documentation.git"
@@ -119,7 +119,7 @@
     "react-shallow-testutils": "^3.0.0",
     "react-test-renderer": "^16.3.2",
     "terriajs-jasmine-ajax": "^3.2.1",
-    "rer3d-terriajs-server": "glughi/rer3d-terriajs-server",
+    "rer3d-terriajs-server": "bioretics/rer3d-terriajs-server#1.2.2",
     "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
