--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "dompurify": "^1.0.2",
     "file-loader": "^3.0.1",
     "file-saver": "^1.3.8",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "hammerjs": "^2.0.6",
     "html-to-react": "^1.3.4",
     "imports-loader": "^0.8.0",
@@ -97,7 +97,7 @@
     "glob-all": "^3.0.1",
     "husky": "^2.2.0",
     "jasmine-core": "^2.9.1",
-    "jsdoc": "^3.5.0",
+    "jsdoc": "~3.5.0",
     "karma": "^4.0.0",
     "karma-browserstack-launcher": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -119,7 +119,7 @@
     "react-shallow-testutils": "^3.0.0",
     "react-test-renderer": "^16.3.2",
     "terriajs-jasmine-ajax": "^3.2.1",
-    "rer3d-terriajs-server": "bioretics/rer3d-terriajs-server#1.2.3",
+    "rer3d-terriajs-server": "^1.2.3",
     "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
