--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rer3d-terriajs",
-  "version": "2.4.3",
+  "version": "2.4.5",
   "description": "Geospatial data visualization platform.",
   "license": "Apache-2.0",
   "engines": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/bioretics/terriajs"
+    "url": "http://github.com/bioretics/rer3d-terriajs"
   },
   "config": {
     "docRepo": "git@github.com:TerriaJS/Documentation.git"
